<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:layout_marginTop="34dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#ff3a382f"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_below="@id/titleText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/apple"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="365dp"
        android:layout_height="255dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/row_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        
        <EditText
            android:id="@+id/foodEditText"
            android:padding="14dp"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_food"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/caloriesEditText"
            android:padding="14dp"
            android:inputType="number"
            android:hint="@string/hint_calories"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/caloriesEditText"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/submitButton"
                android:layout_marginTop="24dp"
                android:background="#316778"
                android:text="@string/submit_text"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_marginLeft="15dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/skipButton"
                android:layout_marginTop="24dp"
                android:background="#316778"
                android:text="@string/view_foods"
                android:textColor="@android:color/white"/>

        </LinearLayout>
        
    </LinearLayout>


</RelativeLayout>